--- a/Templates/index.html
+++ b/Templates/index.html
@@ -3,23 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <title>Covid19 PPE Shortages </title>
-    <link rel="stylesheet" type="text/css" href="static/style.css">
+    <link rel="stylesheet" type="text/css" href="static/styles.css">
   </head>
   <body>
     <h1>
-      Covid19 PPE Shortages
+      COVID-19 Predicted Number of Cases by State
     </h1>
-    <!-- <p>
-      <b>Results:</b> {{ results }}
-    </p> -->
     <table>
       {% for key, value in results.items() %}
          <tr>
-              <th> {{ key }} </th>
-              <td> {{ value }} </td>
+            <th> {{ key }} </th>
+            <td> {{ value }} </td>
          </tr>
       {% endfor %}
     </table>
-
   </body>
 </html>
